[tool.poetry]
name = "pdf-insight"
version = "0.1.0"
description = ""
authors = ["shubhammandowara <shubham77mandowara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.2"
pymupdf = "^1.25.3"
langchain = "^0.3.19"
huggingface-hub = "^0.29.1"
langchain-community = "^0.3.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
